--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "make-styles": "tailwindcss -i ./src/styles/index.css -o ./src/styles/tailwind.css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
